--- a/.gitignore
+++ b/.gitignore
@@ -1,3 +1,5 @@
 /node_modules/
 /backend/node_modules/
 /frontend/node_modules/
+/backend-websocket/node_modules/
+/frontend-websocket/node_modules/
